test(flow): 优化流程相关测试用例
- 新增 ExclusiveGatewayExecutor 相关测试用例- 重构 DefinitionProcessorTest、RuntimeProcessorTest 中的断言逻辑- 将 EntityBuilder 从 flow 包移动到 flow/util 包
- 新增 GroovyUtilTest 测试类